# ncrequest

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/ncrequest/: helper.h  helper.hpp  http_header.h  http_header.hpp  request.h  request.hpp  request_opt.h  request_opt.hpp  response.h  response.hpp  response_p.h  response_p.hpp  session.h  session.hpp  session_p.h  session_p.hpp  session_share.h  session_share.hpp  type.h  type.hpp  type_list.h  type_list.hpp  uri.h
src/: asio.cppm  connection.cppm  connection.h  connection.hpp  curl_easy.h  curl_easy.hpp  curl_error.hpp  curl_multi.h  curl_multi.hpp  error.cppm  http.cpp  http.cppm  log.hpp  macro.hpp  mod.cppm  peg.cpp  request.cpp  request.cppm  request_p.h  request_p.hpp  response.cpp  response.cppm  session.cpp  session.cppm  session_share.cpp  session_share.cppm  type.cpp  type.cppm  type_list.cppm  websocket.cpp  websocket.cppm
src/client/: http_backend.cppm  websocket_backend.cppm
src/client/curl/: connection.cppm  curl.cppm  curl_easy.cppm  curl_error.cppm  curl_multi.cppm  init.cpp  init.cppm  mod.cppm  response.cpp  response.cppm  session.cpp  session.cppm  websocket.cpp  websocket.cppm
src/client/qt_network/: backend.cppm  mod.cppm
src/client/qt_websockets/: backend.cppm  mod.cppm
src/coro/: asio.cppm  base.cppm  mod.cppm  rstd.cppm
src/curl/: curl_easy.cppm  curl_error.cppm  curl_multi.cppm  init.cpp  init.cppm  mod.cppm
src/event/: asio.cpp  asio.cppm  interface.cppm  mod.cppm
src/peg/: http.hpp
test/: CMakeLists.txt  http.cpp  http_server_test.py  main.cpp  qt_network.cpp  qt_network_main.cpp  qt_websockets.cpp  websocket.cpp  websocket_server_test.py
